--- a/projects/movie-webpage.html
+++ b/projects/movie-webpage.html
@@ -43,10 +43,12 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Example Project</h1>
-            <p>Text about the project</p>
-            <p>More text about the project.</p>
-            <a href="#">Link about the project</a><br>
+            <h1 class="margin text-center">Movie Project</h1>
+            <p>My goal was to make a movie webpage with my partner (Yu) by using HTML and CSS in Replit. </p>
+            <p>We decided to make our webpage based on Rick and Morty, so we created a new character named moron because if its rick and morty, it is copywrite and we get copywrite fee. We worked together to accomplish our goal, each of us worked on different parts of the coding, we kept in contact throughout the entire project to ensure we had reached all the requirements necessary for a 100.
+
+.</p>
+            <a href="https://movie-webpage-1.brianw5222.repl.co">Preview of the webpage</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
