--- a/projects/movie-webpage.html
+++ b/projects/movie-webpage.html
@@ -44,18 +44,18 @@
         <div class="container">
 
             <h1 class="margin text-center">Movie Project</h1>
-            <p>My goal was to make a movie webpage with my partner (Yu) by using HTML and CSS in Replit. </p>
-            <p>We decided to make our webpage based on Rick and Morty, so we created a new character named moron because if its rick and morty, it is copywrite and we get copywrite fee. We worked together to accomplish our goal, each of us worked on different parts of the coding, we kept in contact throughout the entire project to ensure we had reached all the requirements necessary for a 100.
-
-.</p>
+            <p>I make a very good movie webpage with my partner (Yu) by using HTML and CSS in Replit. </p>
+            <p>We decided to make our webpage based on Rick and Morty, so we created a new character named moron because if its rick and morty, it is copywrite and we get copywrite fee. We worked together to accomplish our goal, each of us worked on different parts of the coding, we kept in contact throughout the entire project to ensure we had reached all the requirements necessary for a 100.</p>
+            <p>Some takeaway and challenge is making the border around the image also I did nothing and only edit the part Yu said. Its hard becuase Yu is very smart and I am very dumb. His instruction are very complex and I don't understand it. </p>
+            <p> One big thing I learn from this project is communication. He said a lot of things to make the movie-webpage better and I have to ask him a lot of questions on how to put the code in.
             <a href="https://movie-webpage-1.brianw5222.repl.co">Preview of the webpage</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
-            <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
+            <!--<a href="https://movie-webpage-1.brianw5222.repl.co">This is the Final View</a><br>-->
             <!--EXAMPLE OF GITHUB LINK-->
-            <!--<a href="http://github.com/yourUserName/yourRepoName">Github</a><br>-->
+            <!--<a href="https://replit.com/@brianw5222/movie-webpage-1#index.html">This is the code for the project</a><br>-->
 
-            <img src="../img/avatar.png" class="img-fluid project-img">
+            <img src="../img/movie.png" class="img-fluid project-img">
 
 
             <div class="row">
