--- a/projects/ww1.html
+++ b/projects/ww1.html
@@ -49,15 +49,9 @@
             <a href="#">Link about the project</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
-            <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
-            <!--EXAMPLE OF GITHUB LINK-->
-            <!--<a href="http://github.com/yourUserName/yourRepoName">Github</a><br>-->
-          
-          
-            EXAMPLE OF PREVIEW LINK
-            <a href="http://yourUserName.github.io/yourRepoName">Preview</a><br
+            <a href="http://brianw5222.github.io/world-war-1">Preview Link</a><br
             EXAMPLE OF GITHUB LINK
-            <a href="http://github.com/yourUserName/yourRepoName">Github</a><br
+            <a href="https://github.com/brianw5222/world-war-1">Github Link</a><br
 
             <img src="../img/avatar.png" class="img-fluid project-img">
 
