--- a/projects/ww1.html
+++ b/projects/ww1.html
@@ -44,8 +44,8 @@
         <div class="container">
 
             <h1 class="margin text-center">WW1 Project</h1>
-            <p>This is an fun adventure about WW1. </p>
-            <p>You want to survive the War. Don't worry, You can play again.</p>
+            <p>This is an fun adventure about WW1. You want to survive the War. Don't worry, You can play again.</p>
+            <p>A challenge </p>
             <a href="#">Link about the project</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
@@ -53,7 +53,7 @@
             EXAMPLE OF GITHUB LINK
             <a href="https://github.com/brianw5222/world-war-1">Github Link</a><br
 
-            <img src="../img/avatar.png" class="img-fluid project-img">
+            <img src="../img/ww1.png" class="img-fluid project-img">
 
 
             <div class="row">
