--- a/projects/cyoa.html
+++ b/projects/cyoa.html
@@ -46,13 +46,9 @@
             <h1 class="margin text-center">WW1 Project</h1>
             <p>This is an fun adventure about WW1. You want to survive the War. Don't worry, You can play again.</p>
             <p>A challenge </p>
-            <a href="#">Link about the project</a><br>
+            <a href="https://github.com/brianw5222/world-war-1">Link about the project</a><br>
 
-            <!--EXAMPLE OF PREVIEW LINK-->
-            <a href="http://brianw5222.github.io/world-war-1">Preview Link</a><br
-            EXAMPLE OF GITHUB LINK
-            <a href="https://github.com/brianw5222/world-war-1">Github Link</a><br
-
+            
             <img src="../img/ww1.png" class="img-fluid project-img">
 
 
