--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <h5 class="card-title">World-War-1</h5>
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
                             <p class="card-text">This is my second project</p>
-                            <a href="project/ww1-.html" class="card-link">More</a>
+                            <a href="project/coya.html" class="card-link">More</a>
                         </div>
                     </div>
                 </div>
