--- a/projects/cyoa.html
+++ b/projects/cyoa.html
@@ -46,7 +46,7 @@
             <h1 class="margin text-center">WW1 Project</h1>
             <p>This project is about WW1. In this project, you go back in time through WW1 and your job is to pick between 2 or more choices to try to live.</p>
             <p>The most common way to die is by getting bombed and there are 12 files and 16 different choices. Also, even if you die, you can just start a new life. </p>
-            <p>Some challenge and takeaway is trying to make all the link go to differnt files without crashing and getting a 101 error. Since each link has to go to a designed location, its easy to mess up and </p>
+            <p>Some challenge and takeaway is trying to make all the link go to differnet files without crashing and getting a 404 error. Since each link has to go to a designed location, its easy to mess up and </p>
             <a href="https://github.com/brianw5222/world-war-1">Link about the project</a><br>
             
             <img src="../img/ww1.png" class="img-fluid project-img">
