--- a/projects/sep10-fp.html
+++ b/projects/sep10-fp.html
@@ -53,7 +53,7 @@
             <!--EXAMPLE OF GITHUB LINK-->
             <a href="https://github.com/brianw5222/sep10-freedom-project">Github</a><br>
 
-            <img src="../img/avatar.png" class="img-fluid project-img">
+            <img src="../img/construction.jpeg" class="img-fluid project-img">
 
 
             <div class="row">
