--- a/projects/sep10-fp.html
+++ b/projects/sep10-fp.html
@@ -43,10 +43,10 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Example Project</h1>
-            <p>Text about the project</p>
-            <p>More text about the project.</p>
-            <a href="#">Link about the project</a><br>
+            <h1 class="margin text-center">Freedom Project</h1>
+            <p>This is a website made with bootstrap template.<p>
+            <p>This is the last project for SEP10.</p>
+            <!-- <a href="#">Link about the project</a><br> -->
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <a href="http://brianw5222.github.io/sep10-freedom-project">Preview</a><br>
