--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
                 <p><a href="www.github.io" class="card-link">Github</a></p>
             </div>
             <div class="col-sm-4">
-                <p><a href="cs50.dev" class="card-link">More</a>CodeSpace</p>
+                <p><a href="cs50.dev" class="card-link">CodeSpace</a></p>
             </div>
             <div class="col-sm-4">
-                <p>Something random</p>
+                <p>Something random to add</p>
             </div>
         </div>
     </div>
