--- a/projects/sep11-fp.html
+++ b/projects/sep11-fp.html
@@ -53,7 +53,7 @@
             <!--EXAMPLE OF GITHUB LINK-->
             <a href="https://replit.com/@brianw5222/kaboomjs-rpg">Replit</a><br>
 
-            <img src="../img/avatar.png" class="img-fluid project-img">
+            <img src="../img/rpg.jpg" class="img-fluid project-img">
 
 
             <div class="row">
