--- a/index.html
+++ b/index.html
@@ -97,6 +97,17 @@
                     </div>
                 </div>
 
+                <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Freedom Project</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">11th Grade</h6>
+                            <p class="card-text">A simple game made with kaboom.js</p>
+                            <a href="#" class="card-link">More</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
         </a>
